# crewai-agents

./: .gitignore  README.md  pyproject.toml
src/crewai_agents/: crew.py  main.py
src/crewai_agents/config/: agents.yaml  tasks.yaml
