[project]
name = "crewai_agents"
version = "0.1.0"
description = "crewai-agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.0"
]

[project.scripts]
crewai_agents = "crewai_agents.main:run"
run_crew = "crewai_agents.main:run"
train = "crewai_agents.main:train"
replay = "crewai_agents.main:replay"
test = "crewai_agents.main:test"
run_with_trigger = "crewai_agents.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
